<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my"
            android:icon="@drawable/ic_menu_face"
            android:title="@string/menu_my" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_building"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/menu_friends" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
