<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobilehci.campustour.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my"
        android:name="com.mobilehci.campustour.ui.my.MyFragment"
        android:label="@string/menu_my"
        tools:layout="@layout/fragment_my" />

    <fragment
        android:id="@+id/nav_all"
        android:name="com.mobilehci.campustour.ui.all.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mobilehci.campustour.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>